bin/testsuite/tests/compiler/src/errors/compiler1655.swg
#global testerror "Err0220"

//#[Swag.PrintBc]
#run
{
    var ptr = #typeof(s32)
    ptr += 1
}
